--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Simon Dahal<title>
+	<title>
+		Simon Dahal
+	</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+	<div>
+		Hello World
+	</div>
 </body>
 </html>
