Navbar and Background Image

--- a/index.html
+++ b/index.html
@@ -1,12 +1,136 @@
-<html>
-<head>
-	<title>
-		Simon Dahal
-	</title>
-</head>
-<body>
-	<div>
-		Hello World
-	</div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>
+      Simon Dahal
+    </title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--Bootstrap CSS-->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <!--FontAwesome CSS-->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      crossorigin="anonymous"
+    />
+    <!--My own Custom CSS-->
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body data-spy="scroll" data-target=".navbar">
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+      <a class="navbar-brand" href="#" style="font-family:fantasy">Simon</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#collapsibleNavbar"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#aboutme">About Me</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- IMAGE -->
+    <div class="image" id="home">
+      <div class="portfolio">
+        <h1 class="display-3">My Portfolio</h1>
+        <a
+          href="https://github.com/simonsd054"
+          class="btn btn-secondary btn-lg btn-github"
+          target="_blank"
+        >
+          <i class="fab fa-github"></i> Github Profile
+        </a>
+        <a
+          href="https://linkedin.com/in/simonsd054"
+          class="btn btn-secondary btn-lg btn-linkedin"
+          target="_blank"
+        >
+          <i class="fab fa-linkedin"></i> LinkedIn Profile </a
+        ><br /><br />
+        <a
+          href="https://drive.google.com/file/d/1_FmEpQDu9zrlAJewdW_duOS6Y_frvbmO/view?usp=sharing"
+          class="btn btn-secondary btn-lg btn-cv"
+          target="_blank"
+        >
+          <i class="fas fa-scroll"></i> My Resume
+        </a>
+      </div>
+    </div>
+    <div class="container" id="projects">
+      <br />
+      <br />
+      <br />
+      Projects
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <div class="container" id="aboutme">
+      <br />
+      <br />
+      <br />
+      About Me
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+  </body>
 </html>
