Photo and About Text Added

--- a/index.html
+++ b/index.html
@@ -109,8 +109,16 @@
       <h1><i class="fas fa-info-circle"></i> About</h1>
       <div class="row">
         <div class="col-sm-4 ">
-          <img src="http://emant.altervista.org/ext/avatar.png" alt="description" title="tool tip"
+          <img src="./images/portfolio-pic.jpg" alt="description" title="Simon Dahal"
             class="img-circle shadow up-hover avatar">
+          <br>
+          <br>
+          <p class="about-text">Passionate computer engineer looking for entry level software engineer post to boost
+            career forward.</p>
+          <p class="about-text">
+            Seeking to leverage software and website development abilities and skills along with the betterment of the
+            company.
+          </p>
         </div>
         <div class="col-sm-8 ">
           <h2 class="text-primary stm-font">LANGUAGES</h2>
@@ -176,13 +184,18 @@
         <div class="col-sm-6 col-md-4">
           <!--start element 3-->
           <div class="thumbnail shadow up-hover">
-            <img src="http://emant.altervista.org/ext/calc.jpg" />
+            <img src="./images/portfolio.png" />
             <div class="cust-caption">
-              <a href="https://codepen.io/Em-Ant/full/OVabRP">
-                <h3 class="stm-font">Pocket Calculator</h3>
-              </a>
-              <p>A bootstrap and jQuery powered emulation of a vintage pocket calculator. It features the classic
-                operator chaining workflow, and the percent operator in windows calc mode.</p>
+              <h3 class="stm-font">My Portfolio</h3>
+              <p class="cust-text"> A simple website to show my portfolio. <p class="cust-tech">
+                  HTML | CSS3 | JQuery | Bootstrap </p>
+              </p>
+              <div class="cust-button">
+                <a href="https://www.github.com/simonsd054/simonsd054.github.io" class="btn btn-github btn-xs"
+                  target="_blank"><i class="fab fa-github"></i> Github Link</a>
+                <a href="https://simonsd054.github.io" class="btn btn-website btn-xs" target="_blank">
+                  Visit Website <i class="fas fa-external-link-alt"></i> </a>
+              </div>
             </div>
           </div>
         </div>
