Contacts Project Added

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
           <h2 class="text-primary stm-font">FRONTEND</h2>
           <p>VueJS, ReactJS, Bootstrap, HTML, CSS, JQuery</p>
           <h2 class="text-primary stm-font">BACKEND</h2>
-          <p>NodeJS, ExpressJS, Laravel</p>
+          <p>NodeJS, ExpressJS, Laravel, Spring MVC</p>
           <h2 class="text-primary stm-font">DATABASE</h2>
           <p>MySQL, PostgreSQL, MongoDB</p>
           <h2 class="text-primary stm-font">OTHER COMPUTER SKILLS</h2>
-          <p>Data Structure and Algorithm, Git, Linux, UML, Object-Oriented Analysis and Design, AJAX</p>
+          <p>RESTful Architecture, GraphQL, Data Structure and Algorithm, Git, Linux, UML, Object-Oriented Analysis and Design, AJAX</p>
         </div>
       </div>
     </section>
@@ -204,14 +204,17 @@
         <div class="col-sm-6 col-md-4">
           <!--start element 4-->
           <div class="thumbnail shadow up-hover">
-            <img src="http://emant.altervista.org/ext/quotes.jpg" />
+            <img src="./images/contacts-spring.jpg" />
             <div class="cust-caption">
-              <a href="https://codepen.io/Em-Ant/full/jPQqwB">
-                <h3 class="stm-font">Random Quotes Machine</h3>
-              </a>
-              <p>This little app retrieves random quotes from the 'Quotes.net' servers. It uses AJAX calls in
-                jQuery,
-                and the Twitter API. Made with Bootstrap, and custom images</p>
+                <h3 class="stm-font">Contacts App</h3>
+                <p class="cust-text"> A simple website to manage contacts. <p class="cust-tech">
+                  React | Spring | MongoDB </p>
+                  <div class="cust-button">
+                    <a href="https://www.github.com/simonsd054/contacts" class="btn btn-github btn-xs"
+                      target="_blank"><i class="fab fa-github"></i> Github Link</a>
+                    <a href="https://contacts-simon.herokuapp.com" class="btn btn-website btn-xs" target="_blank">
+                      Visit Website <i class="fas fa-external-link-alt"></i> </a>
+                  </div>
             </div>
           </div>
         </div>
