Contacts Project Added

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="cust-caption">
                 <h3 class="stm-font">Contacts App</h3>
                 <p class="cust-text"> A simple website to manage contacts. <p class="cust-tech">
-                  React | Spring | MongoDB </p>
+                  React | Spring | MongoDB | Bootstrap</p>
                   <div class="cust-button">
                     <a href="https://www.github.com/simonsd054/contacts" class="btn btn-github btn-xs"
                       target="_blank"><i class="fab fa-github"></i> Github Link</a>
