Change specific name to more generic name

--- a/index.html
+++ b/index.html
@@ -217,10 +217,10 @@
 
                     <div class="col-sm-12">
                         <!---start element 2-->
-                        <h2 class="text-primary stm-font">Tigg App</h2>
+                        <h2 class="text-primary stm-font">ERP for SMEs</h2>
                         <h3>
-                            A cloud-based SaaS to manage your business securely
-                            and remotely.
+                            A cloud-based SaaS ERP software to manage business
+                            securely and remotely.
                         </h3>
                         <ul class="list-group">
                             <li class="list-group-item">
