Add/Fix experience and fix other minor issues

--- a/index.html
+++ b/index.html
@@ -124,15 +124,6 @@
                                     ><i class="fab fa-linkedin"></i
                                 ></a>
                             </li>
-                            <li>
-                                <a
-                                    class="btn btn-default btn-lg"
-                                    href="https://drive.google.com/file/d/1ZayDagUHo5ieB1dmPZE-Ofl34TXgi94j/view?usp=sharing"
-                                    title="Simon's CV"
-                                    target="_blank"
-                                    ><i class="fa fa-scroll"></i
-                                ></a>
-                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -187,6 +178,27 @@
 
                     <div class="col-sm-12">
                         <!---start element 1-->
+                        <h2 class="text-primary stm-font">ERP for SMEs</h2>
+                        <h3>
+                            A cloud-based SaaS ERP software to manage business
+                            securely and remotely.
+                        </h3>
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                Worked on the development of frontend of the
+                                application
+                            </li>
+                            <li class="list-group-item">
+                                Created an internal component library to use in
+                                all the related applications
+                            </li>
+                        </ul>
+                        <h4>Stack: react, styled-components, redux, axios</h4>
+                    </div>
+                    <!---end element 1-->
+
+                    <div class="col-sm-12">
+                        <!---start element 2-->
                         <h2 class="text-primary stm-font">
                             Appointment Scheduling Application
                         </h2>
@@ -211,16 +223,13 @@
                         </ul>
                         <h4>Stack: react, styled-components, redux, axios</h4>
                     </div>
-                    <!---end element 1-->
-
-                    <hr class="element-divider" />
+                    <!---end element 2-->
 
                     <div class="col-sm-12">
-                        <!---start element 2-->
-                        <h2 class="text-primary stm-font">ERP for SMEs</h2>
+                        <!---start element 3-->
+                        <h2 class="text-primary stm-font">Online Education Platform</h2>
                         <h3>
-                            A cloud-based SaaS ERP software to manage business
-                            securely and remotely.
+                            Web application for students to study online.
                         </h3>
                         <ul class="list-group">
                             <li class="list-group-item">
@@ -228,13 +237,12 @@
                                 application
                             </li>
                             <li class="list-group-item">
-                                Created an internal component library to use in
-                                all the related applications
+                                Worked a little bit on the backend part also
                             </li>
                         </ul>
-                        <h4>Stack: react, styled-components, redux, axios</h4>
+                        <h4>Stack: react, express, graphql</h4>
                     </div>
-                    <!---end element 2-->
+                    <!---end element 3-->
                 </div>
             </section>
             <!--end portfolio-->
@@ -245,23 +253,31 @@
                 <div class="row">
                     <!---start row-->
 
-                    <div class="col-sm-6">
+                    <div class="col-sm-12 mb-20">
                         <!---start element 2-->
                         <h2 class="text-primary stm-font">
                             Rara Digital Lab Pvt. Ltd.
                         </h2>
-                        <h4>July 1, 2021 - Present</h4>
+                        <h4>July 1, 2021 - March 25, 2022</h4>
                         <h3>Stack: react, styled-components, redux, axios</h3>
                     </div>
                     <!---end element 1-->
 
-                    <div class="col-sm-6 divider-right">
-                        <!---start element 1-->
+                    <div class="col-sm-12 mb-20">
+                        <!---start element 2-->
                         <h2 class="text-primary stm-font">Gurzu Inc.</h2>
                         <h4>June 15, 2020 - June 30, 2021</h4>
                         <h3>Stack: react, styled-components, redux, axios</h3>
                     </div>
                     <!---end element 2-->
+
+                    <div class="col-sm-6">
+                        <!---start element 3-->
+                        <h2 class="text-primary stm-font">BIZHUB IT SERVICE PVT. LTD.</h2>
+                        <h4>January 1, 2020 - May 31, 2020</h4>
+                        <h3>Stack: react, express, graphql</h3>
+                    </div>
+                    <!---end element 3-->
                 </div>
             </section>
             <!--end experiences-->
