Add education and experience

--- a/index.html
+++ b/index.html
@@ -143,28 +143,46 @@
                         />
                         <br />
                         <br />
-                        <h4 class="about-text text-center">
+                        <h3 class="about-text text-center">
                             Software Engineer
-                        </h4>
-                        <p class="about-text text-center">
+                        </h3>
+                        <p class="about-text text-justify">
                             Seeking to leverage software and website development
                             abilities and skills along with the betterment of
                             the company.
                         </p>
+                        <h3 class="about-text text-center">Education</h3>
+                        <div class="about-text education-section">
+                            <div class="education-section-div">
+                                <span>Bachelors of Computer Engineering</span>
+                                <span class="education-date">2015-2019</span>
+                            </div>
+                            <span>Tribhuvan University, Nepal</span>
+                        </div>
+                        <div class="about-text education-section">
+                            <div class="education-section-div">
+                                <span>Masters of Information Technology</span>
+                                <span class="education-date">2022-Present</span>
+                            </div>
+                            <span
+                                >Swinburne University of Technology,
+                                Australia</span
+                            >
+                        </div>
                     </div>
                     <div class="col-sm-6">
                         <h2 class="text-primary stm-font">LANGUAGES</h2>
-                        <p>JavaScript</p>
+                        <p>JavaScript, Python</p>
                         <h2 class="text-primary stm-font">FRONTEND</h2>
                         <p>ReactJS, Bootstrap, HTML, CSS, Styled Components</p>
                         <h2 class="text-primary stm-font">BACKEND</h2>
-                        <p>NodeJS, ExpressJS</p>
+                        <p>NodeJS, ExpressJS, Flask</p>
                         <h2 class="text-primary stm-font">DATABASE</h2>
                         <p>MongoDB, MySQL, PostgreSQL</p>
                         <h2 class="text-primary stm-font">
                             OTHER COMPUTER SKILLS
                         </h2>
-                        <p>RESTful Architecture, GraphQL, Git</p>
+                        <p>RESTful Architecture, GraphQL, Git, Linux</p>
                     </div>
                 </div>
             </section>
@@ -227,10 +245,10 @@
 
                     <div class="col-sm-12">
                         <!---start element 3-->
-                        <h2 class="text-primary stm-font">Online Education Platform</h2>
-                        <h3>
-                            Web application for students to study online.
-                        </h3>
+                        <h2 class="text-primary stm-font">
+                            Online Education Platform
+                        </h2>
+                        <h3>Web application for students to study online.</h3>
                         <ul class="list-group">
                             <li class="list-group-item">
                                 Worked on the development of frontend of the
@@ -254,23 +272,52 @@
                     <!---start row-->
 
                     <div class="col-sm-12 mb-20">
-                        <!---start element 2-->
-                        <h2 class="text-primary stm-font">
-                            Rara Digital Lab Pvt. Ltd.
-                        </h2>
-                        <h4>July 1, 2021 - March 25, 2022</h4>
-                        <h3>Stack: react, styled-components, redux, axios</h3>
+                        <!---start element 1-->
+                        <div class="experience-section">
+                            <h2 class="text-primary stm-font">
+                                Coder Academy, Australia
+                            </h2>
+                            <h4 class="experience-date">
+                                08 August, 2022 - Present
+                            </h4>
+                        </div>
+                        <h4 class="m-0">Academic Teacher</h4>
+                        <h3>
+                            Stack: HTML, CSS, Python, PostgreSQL, Flask,
+                            JavaScript, MERN Stack
+                        </h3>
                     </div>
                     <!---end element 1-->
 
                     <div class="col-sm-12 mb-20">
                         <!---start element 2-->
-                        <h2 class="text-primary stm-font">Gurzu Inc.</h2>
-                        <h4>June 15, 2020 - June 30, 2021</h4>
-                        <h3>Stack: react, styled-components, redux, axios</h3>
+                        <div class="experience-section">
+                            <h2 class="text-primary stm-font">
+                                Rara Digital Lab Pvt Ltd, Nepal
+                            </h2>
+                            <h4 class="experience-date">
+                                01 July, 2021 - 25 March, 2022
+                            </h4>
+                        </div>
+                        <h4 class="m-0">Associate Software Engineer</h4>
+                        <h3>Stack: React, Styled Components, Redux</h3>
                     </div>
                     <!---end element 2-->
 
+                    <div class="col-sm-12 mb-20">
+                        <!---start element 3-->
+                        <div class="experience-section">
+                            <h2 class="text-primary stm-font">
+                                Jyaasa Technologies Pvt Ltd (Gurzu Inc.), Nepal
+                            </h2>
+                            <h4 class="experience-date">
+                                15 June, 2020 - 30 June, 2021
+                            </h4>
+                        </div>
+                        <h4 class="m-0">Associate Software Engineer</h4>
+                        <h3>Stack: React, Styled Components, Redux</h3>
+                    </div>
+                    <!---end element 3-->
                 </div>
             </section>
             <!--end experiences-->
